src/objects/Eloqua_Marketing_Interactions__c.object
<CustomObject>
    <description>Read-Only custom object for both leads and contacts pages to update marketing interaction details for lead and contact records.</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Date of Activity</description>
        <inlineHelpText>Date of Marketing Activity</inlineHelpText>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Detail__c</fullName>
        <description>Details for this activity.</description>
        <inlineHelpText>Details for this activity.</inlineHelpText>
        <label>Activity Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Type of marketing activity.</description>
        <inlineHelpText>Type of marketing activity.</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email Click</fullName>
                </value>
                <value>
                    <fullName>Form Submit</fullName>
                </value>
                <value>
                    <fullName>Website Visit</fullName>
                </value>
                <value>
                    <fullName>Email Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Eloqua Marketing Interactions</relationshipLabel>
        <relationshipName>Eloqua_Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <description>Contact ID from Eloqua marketing system.</description>
        <inlineHelpText>Contact ID from Eloqua marketing system.</inlineHelpText>
        <label>Eloqua Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Email__c</fullName>
        <formula>IF( 
ISBLANK(Contact_ID__c), 
Lead_ID__r.Email, 
Contact_ID__r.Email 
)</formula>
        <label>Lead/Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Eloqua Marketing Interactions</relationshipLabel>
        <relationshipName>Eloqua_Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Description__c</fullName>
        <description>This field provides the user a description of what resource has been downloaded/accessed.</description>
        <inlineHelpText>This field provides the user a description of what resource has been downloaded/accessed.</inlineHelpText>
        <label>Resource Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Clicks__c</fullName>
        <description>Total number of clicks on marketing web link(s).</description>
        <inlineHelpText>Total number of clicks on marketing web link(s).</inlineHelpText>
        <label>Total Clicks</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opens__c</fullName>
        <description>Total number of opens of marketing resource.</description>
        <inlineHelpText>Total number of opens of marketing resource.</inlineHelpText>
        <label>Total Opens</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL for marketing activity</description>
        <inlineHelpText>URL for marketing activity.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_Location__c</fullName>
        <label>Website Location</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <label>Eloqua Marketing Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>email</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Marketing Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eloqua Marketing Interactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>